--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "fortiate": "./app.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pretest": "eslint --ignore-path .gitignore ."
   },
   "keywords": [],
   "author": "fortiate",
@@ -33,5 +34,9 @@
     "shelljs": "^0.8.4",
     "simple-git": "^2.1.0",
     "touch": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-strongloop": "^2.1.0"
   }
 }
