--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
     "node-fetch": "^2.6.0",
+    "prettier": "^2.0.5",
     "shelljs": "^0.8.4",
     "simple-git": "^2.1.0",
     "touch": "^3.1.0"
