--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,15 @@
 {
-	"extends": "strongloop",
-	"rules": {
-		"max-len": [2, 120, 8]
-	},
-	"parserOptions": {
-		"ecmaVersion": 2017
-	},
-	"env": {
-		"es6": true
-	}
+  "extends": "strongloop",
+  "rules": {
+    "max-len": [2, 120, 8],
+    "indent": ["error", 2, { "MemberExpression": 0 }] 
+  },
+  "parserOptions": {
+    "ecmaVersion": 2017
+  },
+  "env": {
+    "es6": true,
+    "mocha": true,
+    "shelljs":true
+  }
 }
