--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fortiate": "./app.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "pretest": "eslint --ignore-path .gitignore ."
   },
   "keywords": [],
@@ -29,6 +29,7 @@
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "lodash": "^4.17.15",
+    "log-symbols": "^4.0.0",
     "minimist": "^1.2.5",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
@@ -37,7 +38,9 @@
     "touch": "^3.1.0"
   },
   "devDependencies": {
+    "chai": "*",
     "eslint": "^6.8.0",
-    "eslint-config-strongloop": "^2.1.0"
+    "eslint-config-strongloop": "^2.1.0",
+    "mocha": "*"
   }
 }
