rapid-development remove core and added develop as default for build along with latest tags for core images

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "mocha",
     "pretest": "eslint --ignore-path .gitignore ."
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "keywords": [],
   "author": "fortiate",
   "license": "UNLICENSED",
