--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prettier": "^2.0.5",
     "shelljs": "^0.8.4",
     "simple-git": "^2.1.0",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "nodemailer": "^6.4.6"
   },
   "devDependencies": {
     "chai": "*",
